[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masonic-ai-crypto"
version = "2.0.0"
description = "AI-powered crypto portfolio analyzer with real-time data and sentiment analysis"
authors = [{name = "Masonic AI", email = "dev@masonic.ai"}]
readme = "README_DEV.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "jinja2==3.1.2",
    "python-multipart==0.0.6",
    "httpx==0.25.2",
    "pydantic>=2.6.0,<3.0.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.24.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "langchain-core>=0.1.8",
    "langgraph>=0.0.20",
    "python-binance==1.0.0",
    "newsapi-python==0.2.6",
    "tavily-python>=0.3.1",
    "neo4j>=5.15.0",
    "pymilvus>=2.3.4",
    "python-dotenv==1.0.0",
    "python-dateutil==2.8.0",
    "pytz==2023.3",
    "websockets==12.0",
    "aiohttp==3.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==0.24.0",
    "flake8==7.3.0",
    "black==25.1.0",
    "bandit==1.8.6",
    "safety>=3.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*", "*.pyc", "__pycache__*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
